# fxstreet-ingestion-engine

./: .gitignore  Cargo.toml  FXSTREET_NEWS_INGESTION_CHALLENGE.md  README.md  response.json
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  backfill.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  fxstreet.rs  lib.rs  models.rs  questdb.rs
crates/lambda/: Cargo.toml
crates/lambda/src/: handler.rs  main.rs
infra/terraform/: .gitignore  ec2.tf  lambda.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
