[workspace]
members = [
  "crates/core",
  "crates/lambda",
  "crates/cli",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.32", features = ["full"] }
