[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
orderx_core = { path = "../core", package = "core" }
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
